2002-12-09  James Henstridge  <james@daa.com.au>

	* src/font-view.c (add_row): handle multiline text.
	(add_face_info): add some extra information found in SFNT or Type1
	fonts.
	(create_text_pixmap): change the font output.

2002-12-06  James Henstridge  <james@daa.com.au>

	* src/ftstream-vfs.c (FT_New_Face_From_URI): if the URI looks
	local, bypass gnome-vfs to open the face (small optimisation).

	* src/font-view.c (create_text_pixmap): only display the font at
	its fixed sizes if it is not scalable.  Before we were ignoring
	the outlines on fonts such as Lucida Console, which includes both
	outlines and bitmaps for small sizes.

2002-12-06  Yanko Kaneti  <yaneti@declera.com>

	* Makefile.am (EXTRA_DIST):
	* configure.in (AC_OUTPUT): 
	* fontilus.spec.in (added): First stab at a spec file.

2002-12-05  James Henstridge  <james@daa.com.au>

	* src/fontilus.keys: set gnome-font-viewer as default app for
	type1, ttf and pcf fonts.

	* src/fontilus.applications: add application registry file for
	gnome-font-viewer.  Set it to accept URIs in file:/// and
	fonts:///.  It supports others though ...

	* src/Makefile.am: change executable names, and install them.

	* src/font-view.c (draw_text): move text drawing into separate
	function.
	(create_text_pixmap): handle bitmap fonts by drawing the test
	string at the correct size(s).
	(add_face_info): display some information about the font.
	(main): add an "in" shadow round the rendered text.

	* src/font-view.c (main): change so that it renders the text at a
	number of different sizes, like fontcarton did.  Need to show some
	info about the font too ...

2002-12-04  James Henstridge  <james@daa.com.au>

	* src/font-view.c (main): get font to render correctly.  Things
	work fine now that I am using the same FT_Library handle as Xft
	was ...
	(main): don't use Xft's FT_Library handle, since it is underscore
	prefixed.  The real problem is that XftInitFtLibrary() wasn't
	getting called.
