@@ -1,3 +1,13 @@
+2002-12-10  James Henstridge  <james@daa.com.au>
+
+	* src/ftstream-vfs.c (FT_New_Face_From_URI): get rid of the local
+	file optimisation.  It didn't make a noticable difference for the
+	large Asian fonts.
+
+	* src/thumbnailer.c (main): set the charmap for the font before
+	rendering the glyphs.  This fixes rendering of some fonts jdub
+	sent me.
+
 2002-12-09  James Henstridge  <james@daa.com.au>
 
 	* src/font-view.c (add_row): handle multiline text.
